fix button plan-a-vision on mobile && disable outline input

--- a/src/styles/blocks/main/plan-a-visit/plan-a-visit.scss
+++ b/src/styles/blocks/main/plan-a-visit/plan-a-visit.scss
@@ -57,6 +57,8 @@
   }
 
   &__button {
+    grid-column: 1 / -1;
+
     @include on-tablet {
       grid-column: span 3;
     }
