--- a/src/styles/blocks/main/subscribe/subscribe.scss
+++ b/src/styles/blocks/main/subscribe/subscribe.scss
@@ -60,11 +60,11 @@
 
       &:focus {
         border-color: $c-button-focus;
+        outline: none;
       }
 
       &:valid {
-        font-weight:  700;
-        
+        font-weight: 700;
       }
     }
   }
